Edits / comments on guidelines paper, chapter 5

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -336,12 +336,12 @@ In the context described here, aggregate abundance LRPs are scientifically deriv
 To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. As outlined in Section \@ref(est-methods), we provide LRPs associated with a range of probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [Table \@ref(tab:LikelihoodsIPCC), @mastrandreaGuidanceNoteLead2010], instead of specifying a single probability. We distinguish *the probability of all* CUs being above Red from *the proportion of* CUs above Red (identified as 100% in Step 4). Both proportional and aggregate abundance LRPs are set at levels where all CUs are above Red status, but aggregate abundance LRPs assign a probability to this occurrence.
 
 
-In our case studies, we provide aggregate abundance LRPs <!--KH: changed from just saying 'logistic regression LRPs' before. Is this ok? -->for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above Red. This approach to delineating serious harm could be considered risk neutral, where risks can be accounted for directly and explicitly in harvest control rules that consider trade-offs among multiple objectives.    
+In our case studies, we provide aggregate abundance LRPs <!--KH: changed from just saying 'logistic regression LRPs' before. Is this ok? -->for the four probability thresholds described above, <!--KH: already said that we applied four thresholds in above paragraph. Perhaps you could combine the two paragraphs?-->and focus sensitivity analyses on a 50% probability of all component CUs having status above Red. This approach to delineating serious harm could be considered risk neutral, where risks can be accounted for directly and explicitly in harvest control rules that consider trade-offs among multiple objectives.    
 
 
 <!-- from ch 6. Does this belonw here? reword?-->
 
-
+<!--KH: I found the second half of the paragraph below (starting with "Alternatively ....") difficult to follow.  I understand the point being made, but I think it will be lost of most readers.  I wonder if this section could come out entirely? I feel like this type of work is a long way off, and mentioning it as part of this step 8 will just complicate things (i.e., we're telling people to choose a probablity for estimating an aggrgegate abundance LRP at this step, but then telling them that using proportional LRPs in a MSE may be better). If we do keep this text, it would benefit from some re-wording to make sentences shorter. Alternatively - maybe it could be put in the roles of LRP section??? -->
 
 Although DFO's Precautionary Approach Framework (2009) states that LRPs under the Fish Stocks provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above Red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options is required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. LW: related to comments in Ch 4, re: probability higher than 0.5 --> Alternatively, proportional LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportional LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time frame required within the objective are identified with managers, First Nations, and stakeholders. When used as part of Management Procedure Framework [e.g.,  @dfoManagementProcedureFramework2021] or management strategy evaluation (MSE), the performance of a variety of management procedures can be evaluated against objectives, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportional LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers, First Nations and stakeholders.
 
@@ -350,9 +350,9 @@ Although DFO's Precautionary Approach Framework (2009) states that LRPs under th
 &nbsp;
 **Choose among aggregate abundance LRPs**
 
-Guidelines for choosing among two types of aggregate abundance LRPs are described here: empirical logistic regression LRPs and projection LRPs that use either historical or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above Red status.<!-- LW comment: This previous sentence is kind of long, suggest make it into two sentences--> These guidelines are based on the separate assumptions required for each method. If assumptions are not met for either method, then developing aggregate abundance LRPs that are aligned with the WSP may not be possible for the SMU. <!--However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance LRPs (Section \@ref(recommendations)).-->
+Guidelines for choosing among two types of aggregate abundance LRPs are described here: <!--empirical  KH: I have suggested removing empirical as it's not used elsewhere to describe logistic regression LRPs--> logistic regression LRPs and projection LRPs. These methods use either historical or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above Red status. The guidelines presented at this step are based on the separate assumptions required for each method. If assumptions are not met for either method, then developing aggregate abundance LRPs that are aligned with the WSP may not be possible for the SMU. <!--However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance LRPs (Section \@ref(recommendations)).-->
 
-Both methods exploit an assumption of covariation in population dynamics among component CUs. If there is positive covariation among component CUs, when one CU has depleted status and contributes relatively few spawners to the aggregate, it is likely that other component CUs will also have depleted status contributing few spawners to the aggregate. Similarly, if one CU is considered healthy and contributes many spawners, other CUs are more likely to be healthy too.  
+Both methods rely on an assumption of positive covariation in population dynamics among component CUs. If this assumption is met, then when one CU has depleted status and contributes relatively few spawners to the aggregate, it is likely that other component CUs will also have depleted status contributing few spawners to the aggregate. Similarly, if one CU is considered healthy and contributes many spawners, other CUs are more likely to be healthy too.  
 
 Given the range of uncertainties and limitations associated with each method, the application and comparison of both methods may be prudent instead of limiting analyses to a single approach (see Step 9).
 
@@ -455,7 +455,7 @@ Projection LRPs may be inappropriate when:
 Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, proportional LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.-->
 
 ### Step 9: Apply Aggregate Abundance LRPs
-
+<!--KH: Note that the step 9 header here does not match with the title used in the flow chart; do you care?  - may not be that important? - the flow chart heading matches the sub-bullet below-->
 Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
 
 We use generational mean spawner abundances as a basis for determining whether the SMU is above or below its LRP. Taking the generational mean integrates status over cohorts within a generation, which can exhibit relatively independent dynamics in some species<!--is there a good reference for this? CH: not sure, but can look for one later-->. This approach reduces noise in annual LRP status determination due to annual fluctuations in abundances from any single cohort. It also makes our determination of LRP status consistent with the approach taken for abundance-based benchmarks in published WSP assessments [e.g., @grant2017FraserSockeye2020] and the Pacific Salmon Status Scanner at the CU level.
@@ -465,7 +465,6 @@ We use generational mean spawner abundances as a basis for determining whether t
 \
 &nbsp;
 **Compare Aggregate Abundance LRPs**
-
 Using multiple analytical approaches to define LRPs is consistent with the principle of using the best available information if evidence to support one method over the other is lacking. Statuses that converge among methods provide a stronger weight-of-evidence that the chosen LRP represents a level above where serious harm may occur. Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. <!--CH repeated above: We suggest comparing aggregate abundance LRPs to current generational (geometric) average spawner abundances instead of annual abundances to integrate across independent cohorts within a generation when deriving SMU status. This approach is consistent with methods used in formal WSP assessments of CUs [e.g., @grant2017FraserSockeye2020]. -->
 
 <!--CH: the following 2 lines give a line break before the next heading-->
