--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -1,7 +1,7 @@
 # INTRODUCTION
 
 
-Under recent amendments to Canada's Fisheries Act, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be more than 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. LRPs have not yet been developed at the SMU-level for Pacific Salmon. This working paper summarizes the application of methods for estimating SMU-level LRPs to three Pacific salmon case study SMUs. These case study applications have been used to inform the development of guidelines for identifying LRPs for Pacific Salmon, which are presented in the companion paper by Holt et al. (in review)^[Holt et. al. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review].  
+Under recent amendments to Canada's *Fisheries Act*, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be more than 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. LRPs have not yet been developed at the SMU-level for Pacific Salmon. This working paper summarizes the application of methods for estimating SMU-level LRPs to three Pacific salmon case study SMUs. These case study applications have been used to inform the development of guidelines for identifying LRPs for Pacific Salmon, which are presented in the companion paper by Holt et al. (in review)^[Holt, C., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S., and Huang, A.-M., Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review].  
 
 While LRPs under the *Fisheries Act* are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU level. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations’ [@dfoCanadaPolicyConservation2005].  Methods to assess CU status have been identified for a range of data types, including WSP Integrated Assessment methods (hereafter called 'WSP assessments') that use expert opinion to combine multiple metrics into a single estimate of CU status [e.g., @grant2017FraserSockeye2020]. Metrics used to assess WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance [@holtIndicatorsStatusBenchmarks2009]. Lower and upper benchmarks on those metrics are used to assign status into one of three zones, with the zones Green, Amber and Red, representing increasingly depleted populations that require increasing management intervention [@dfoCanadaPolicyConservation2005]. A more fulsome description of these concepts is provided in Holt et al., (in review).
 
@@ -9,10 +9,18 @@ LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Maki
 
 The specific goals of this working paper are to:
 
--	demonstrate alternative LRP estimation methods for three Pacific Salmon case study SMUs, and
+-	demonstrate alternative LRP estimation methods for three Pacific salmon case study SMUs, and
 
 -	evaluate candidate LRPs using a combination of sensitivity analyses and, where possible, retrospective analyses.
 
+<!--CH 1 Feb: suggestion on rewording to more closely align with exact text in ToR, and then mention ToR.
+
+The specific goals of this working paper as described in the Terms of Reference are to:
+
+- apply proposed LRP methods to Pacific Salmon case studies over a range of data types and availabilities, and
+
+- evaluate methods for developing LRPs using a combination of sensitivity analyses to key parameters and assumptions, and where possible retrospective analyses.
+-->
 
 A full evaluation of LRPs using closed-loop simulation is beyond the scope of the current project. This type of evaluation is a high priority for future research. 
 
@@ -27,7 +35,7 @@ The case studies considered include:
 Each of these SMUs consists of 3-7 CUs and was selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inside South Coast Chum and West Coast Vancouver Island Chinook). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. 
 
 
-The LRPs presented in this paper are for demonstration purposes only, and not meant to provide formal LRP estimates. The development of LRPs to support implementation of the *Fisheries Act* will require a more thorough review of data and assumptions with local analysts and partners than has been taken here.  
+The LRPs presented in this paper are for illustrative <!--CH 1 Feb: changed from: demonstration--> purposes only, and not meant to provide formal LRP estimates. The development of LRPs to support implementation of the *Fisheries Act* will require a more thorough review of data and assumptions with local analysts and partners<!--CH 1 Feb suggest removing: than has been taken here-->.  
 
 
 
