--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -49,7 +49,7 @@ Hatchery enhancement has occurred, and continues to occur in some parts of the I
 
 The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
-Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
+Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stocks provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
 
 ### Previous assessments
@@ -82,7 +82,7 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 ## CU STATUS ESTIMATION
 
-We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) rapid status estimates from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
+We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) multidimensional status estimates from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
 
 The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for proportional reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
@@ -239,7 +239,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 
 \linebreak
 
-CU status in the Salmon Scanner tool for Interior Fraser Coho is driven by abundance metrics. Because absolute abundance data and benchmarks based on S~gen~ and S~MSY~ were available, the decision tree within the Salmon Scanner (Figure \@ref(fig:decision-tree)) most often assigned CU status based on this metric (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Though status in some cases was also influenced by absolute abundance relative to the threshold of 1500 spawners. This occurred in the Fraser Canyon CU between 2015 and 2017. In these years, the generational average of absolute spawning abundance was < 1500 spawners and the CU was assigned Red status under the first node of the decision tree even though spawning abundances are above S~gen~.
+CU status in the Salmon Scanner tool for Interior Fraser Coho is driven by abundance metrics. Because absolute abundance data and benchmarks based on S~gen~ and S~MSY~ were available, the multidimensional algorithm within the Salmon Scanner (Figure \@ref(fig:decision-tree)) most often assigned CU status based on this metric (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Though status in some cases was also influenced by absolute abundance relative to the threshold of 1500 spawners. This occurred in the Fraser Canyon CU between 2015 and 2017. In these years, the generational average of absolute spawning abundance was < 1500 spawners and the CU was assigned Red status under the first node of the decision tree even though spawning abundances are above S~gen~.
 
  
 The total number of years in which an LRP would have been breached using the Pacific Salmon Status Scanner tool depended on which Ricker stock recruitment model was used to estimate S~gen~.  When status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportional LRP for the SMU would have been breached in 4 of 21 years. For three of these years, the breach was based on Fraser Canyon spawning abundances dropping below 1500 spawners (2015-2017), while for the one additional year (2000) it was due to the Lower Thompson CU having spawning abundance < S~gen~ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). In comparison, when status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportional LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). For both stock recruitment model formulation, status from the Pacific Salmon Status Scanner was above Red for all CUs based on the most recent generational average, indicating that the SMU is currently above a proportional LRP, regardless of spawner recruitment model.
@@ -578,7 +578,7 @@ In addition to the LRP estimation methods presented so far in this case study, w
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2007 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker and Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
+Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The multidimensional algorithm within the Pacific Salmon Status Scanner includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
 
 In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the proportional methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S~gen~ estimates). Declines in the  abundance of the Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance LRP, the Fraser Canyon CU that triggered Red status in 2015-2017 exceeded 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
