--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -54,6 +54,10 @@ region: Pacific Region
 citation_other_language: "Holt, K.R., Holt, C.A., Warkentin, L., Wor, C., Davis, B., Arbeider, M., Bokvist, J., Crowley, S., Grant, S., Luedke, W., McHugh, D., Picco, C., et Van Will, P.. Title Here (*Latin Species Name*). DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
 abstract: |
   The revised *Fisheries Act* requires that Limit Reference Points (LRPs) be identified for all major fish stocks. For Pacific salmon, major fish stocks are represented by stock management units (SMUs). An SMU is composed of one or more salmon conservation units (CUs), which are the assessment units under the Wild Salmon Policy. We introduce methods to estimate LRPs that combine status assessments at the CU level to the SMU level. We demonstrate and evaluate the LRPs for three case study SMUs: Interior Fraser Coho, West Coast Vancouver Island (WCVI) Chinook, and Inner South Coast Chum - excluding Fraser. Methods are divided into two categories: proportional LRPs and aggregate abundance LRPs. Aggregate abundance LRPs are further subdivided into logistic regression LRPs and projection LRPs. The suitability of each method depends on the type, availability and quality of data for each SMU, as well as past CU statuses. Proportional LRPs are recommended as the default method. Aggregate abundance methods may be added to meet specific fisheries management requirements. Proportional LRPs are based on individual CU status assessments. Aggregate abundance logistic regression LRPs are based on past status assessments and are estimable when abundance-based CU status is available, and the SMU data time series has contrasting observations (i.e., there are observations where the LRP has been breached (at least one CU under Red status) and not breached (all CUs above Red status)). Conversely, aggregate abundance projection LRPs are based on future projections and do not require contrast in previous status observations. However, projection LRPs require estimates for population dynamics parameters, as well as evidence of positive covariation among CUs. We discuss suitability and requirements for the application of the various LRP estimation methods, drawing from the range of data and information availability among the case studies.  
+  
+  CH: I reworked it a bit. Feel free to accept/reject any or all of it. I mostly just moved sentences around, added latin names, defined Red status, etc. I also removed a few sentences on requiremnet for contrast (which didn't seem like an critical 'takehome' message?) . Also, I think logitstic regression LRPs need positive covariation more than projection LRPs (though they both benefit from it). I've added this point- feel free to revise!
+  
+    The revised *Fisheries Act* requires that Limit Reference Points (LRPs) be identified for all major fish stocks. For Pacific salmon, major fish stocks are represented by stock management units (SMUs). An SMU is composed of one or more salmon conservation units (CUs), which are the assessment units under the Wild Salmon Policy, WSP. We introduce methods to estimate LRPs at the SMU level that integrate statuses derived under the WSP at the CU level. We demonstrate and evaluate the LRPs for three case study SMUs: Interior Fraser Coho *Oncorhynchus kisutch*, West Coast Vancouver Island (WCVI) Chinook *O. tshawytscha*, and Inner South Coast Chum *O. keta*- excluding Fraser. Methods are divided into two categories: proportional LRPs and aggregate abundance LRPs. Proportional LRPs are recommended as the default method, and are based on the proportion of CUs above levels associated with increased risk of extinction (above 'Red' status) under the WSP. Aggregate abundance methods may be used supplementally to meet specific fisheries management requirements. Aggregate abundance LRPs are subdivided into logistic regression LRPs and projection LRPs.  Both types of aggregate abundance LRPs are defined at the SMU-level abundances associated with a desired probabilty of all component CUs being above Red status, but they differ in that logistic regression LRPs are determined directly from historical data and projection LRPs are determined from projections of CU-level population dynamics. We discuss suitability and requirements for the application of the various LRP estimation methods, drawing from the range of data and information availability among the case studies.  In general, the application of aggregate abundance LRPs may be limited to SMUs where the CU-level populations covary, as demonstrated for the Interior Fraser Coho case study, and where covariance has not changed over time or, for projection LRPs, those changes can be parameterized.
 
 header: "Draft working paper --- Do not cite or circulate" # or "" to omit
 output:
