--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -5,11 +5,11 @@
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize}
-\item Principles for identifying Pacific salmon LRPs are adapted from national guidance on LRPs<!--, as:-->
+\item Principles for identifying Pacific salmon LRPs are adapted from national guidance on LRPs.%, as:
 \item \textbf{Principle 1.} LRPs should be selected based on the best available information. 
 \item \textbf{Principle 2.} LRPs should be consistent with the goal of avoiding serious harm. 
 \item \textbf{Principle 3.} LRPs should be operational, i.e., feasible to calculate and relevant to policy and management.
-\item \textbf{Principle 4.} LRPs should be reliably estimatable.
+\item \textbf{Principle 4.} LRPs should be reliably estimable. 
 \item \textbf{Principle 5.} When selecting among multiple methods for determining LRPs, the choice should take into account uncertainty. 
 \item \textbf{Principle 6.} Pacific salmon LRPs should be consistent with the goals and objectives of the WSP.
 \item These principles are intended to guide our approach for developing Pacific salmon LRPs while providing flexibility due to differences in local biological characteristics, data qualities and data quantities, among salmon species and stocks. 
@@ -22,7 +22,7 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 
 
-**Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, data and knowledge informing underlying biological processes, traditional knowledge, and comparison with similar SMUs (Marentette et al. In prep.). Criteria for evaluating best scientific information developed for US National Standards may be applicable here [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in identifying the most appropriate approach to define an LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with a candidate LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and the uncertainties should be clearly communicated.
+**Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, data and knowledge informing underlying biological processes, Indigenous Knowledge, and comparison with similar SMUs (Marentette et al. In prep.). Criteria for evaluating best scientific information developed for US National Standards may be applicable here [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in identifying the most appropriate approach to define an LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with a candidate LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and the uncertainties should be clearly communicated.
 
 Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments, should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs <!--KH deletion: assessments--> may require peer review.  
 
@@ -98,7 +98,7 @@ Reliable estimation of limit reference points or stock status metrics can mean a
 "
 -->
 
-**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data include fewer assumptions <!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred"-->. 
+**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data include fewer assumptions<!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred"-->. 
 
 When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data quality/quantities can be evaluated in simulation evaluation, where LRPs that are less sensitive to key uncertainties would be preferred.
 
