LW comments on guidelines 03-chap3.Rmd

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -1,6 +1,6 @@
 # PROPOSED LRP METHODS FOR PACIFIC SALMON {#est-methods}
 
-LRP methods require assessments of status at the scale of CUs. Abundance data required for CU assessments are sometimes influenced by hatchery enhancement, which requires additional considerations. This section includes methods to account for hatchery enhancement in status assessments, estimate CU-level statuses, and estimate LRPs based on either the proportion of CUs with status above the Red zone or aggregate abundances to the SMU. 
+LRP methods require assessments of status at the scale of CUs. Abundance data required for CU assessments are sometimes influenced by hatchery enhancement, which requires additional considerations. This section includes methods to account for hatchery enhancement in status assessments, estimate CU-level statuses,<!--LW comment: suggest breaking into new sentence here, to focus last sentence on LRPs--> and estimate LRPs based on either the proportion of CUs with status above the Red zone or aggregate abundances to the SMU. 
 
 ## CONTRIBUTION OF HATCHERIES
 
@@ -11,12 +11,12 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \item Salmon that are enhanced by hatcheries are not considered 'wild' under the Wild Salmon Policy and are not usually included in assessments of biological status.
 \item Following previous Science guidance, we recommend including only populations without significant influence from hatcheries in analyses of biological status under the WSP.
 \item The data used to assess the contribution of hatcheries to spawning are associated with high uncertainties related to the tagging method used, sampling rates, uncertainty in survival of natural vs. hatchery-origin fish, and observation errors.
-\item Populations dominated by wild fish but influenced by hatchery stays from outside the basin (called 'wild stray-influenced' populations) are generally included in CU assessments, but these out-of-basin strays may bias estimates of natural production and resulting assessments, representing an important source of uncertainty for these populations.
+\item Populations dominated by wild fish but influenced by hatchery strays from outside the basin (called 'wild stray-influenced' populations) are generally included in CU assessments, but these out-of-basin strays may bias estimates of natural production and resulting assessments, representing an important source of uncertainty for these populations.
 \item Following previous WSP status assessments, when data are available, the demographic influence of hatchery production is removed from time-series of abundances. This step applies to populations included in analyses, after removing populations with high hatchery influence. Where data to differentiate hatchery- from natural-origin spawners are not available, total spawner abundances include hatchery-origin fish, representing a key source of uncertainty for hatchery-influenced populations.
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
 
 ### Accounting for genetic risks of hatchery production
 
@@ -24,7 +24,7 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 
 
 
-When assessing population status, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild populations within biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here <!--KH: replace 'here' with 'in our case study applications'. Or, alternatively, you could make this more of a recommendation / guidance. E.g., only populations with ... should be included in the assessment of CU and SMU status. -->. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations<!--where coded-wire tags have been applied and sampled for recoveries-->, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are currently being developed by DFO's Salmonid Enhancement Program.
+When assessing population status, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild populations within biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here<!--KH: replace 'here' with 'in our case study applications'. Or, alternatively, you could make this more of a recommendation / guidance. E.g., only populations with ... should be included in the assessment of CU and SMU status. -->. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations<!--where coded-wire tags have been applied and sampled for recoveries-->, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are currently being developed by DFO's Salmonid Enhancement Program.
 
 
 Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: if this is true for IFR, please generalise to "For our case studies, "  KH response: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho??-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For WCVI Chinook, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
@@ -34,12 +34,12 @@ In addition to guidance on biological assessments under the WSP, @withlerGenetic
 
 ### Wild populations influenced by straying from hatcheries
 
-In addition, @withlerGeneticallyBasedTargets2018 recommend that populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) should be included in CU assessments under the WSP. These populations receive strays from out-of-basin hatchery programs, but do not contain hatcheries themselves. Although the majority of fish may be wild in these populations, one-way gene flow modelling suggests that over time PNI values will decline to levels consistent with hatchery-dominated systems with continued straying. In practice, straying from out-of-basin hatcheries and the genetic impacts are generally not monitored or assessed, and so out-of-basin strays are included in total abundances within biological assessments. However, this represents a gap in our knowledge of hatchery impacts and our ability to implement @withlerGeneticallyBasedTargets2018's recommendations.  Two exceptions are @candyPatternsHomingStraying2000 which describes patterns of straying of Chinook salmon in BC <!--KH: can you describe the Chinook systems within BC that Candy looked at?  Was is all of BC? Or, a single system?  At present, this sentence reads a bit funny because one exception is a a paper that appears to apply to all of BC and the other exception applies to a specific part of BC-->, and the west coast of Vancouver Island where studies estimating the extent of straying for Chinook Salmon are on-going and may inform the evaluation of hatchery impacts in future biological assessments (W. Luedke pers. comm.). 
+In addition, @withlerGeneticallyBasedTargets2018 recommend that populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) should be included in CU assessments under the WSP. These populations receive strays from out-of-basin hatchery programs, but do not contain hatcheries themselves. Although the majority of fish may be wild in these populations, one-way gene flow modelling suggests that over time PNI values will decline to levels consistent with hatchery-dominated systems with continued straying. In practice, straying from out-of-basin hatcheries and the genetic impacts are generally not monitored or assessed, and so out-of-basin strays are included in total abundances within biological assessments. However, this represents a gap in our knowledge of hatchery impacts and our ability to implement recommendations from @withlerGeneticallyBasedTargets2018.  Two exceptions are @candyPatternsHomingStraying2000 which describes patterns of straying of Chinook salmon in BC<!--KH: can you describe the Chinook systems within BC that Candy looked at?  Was is all of BC? Or, a single system?  At present, this sentence reads a bit funny because one exception is a a paper that appears to apply to all of BC and the other exception applies to a specific part of BC-->, and the west coast of Vancouver Island where studies estimating the extent of straying for Chinook Salmon are on-going and may inform the evaluation of hatchery impacts in future biological assessments (W. Luedke pers. comm.). 
 
 
 ### Removing the demographic influence of hatchery production
 
-For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current assessment of stock status <!--KH: do you mean 'For our case study applications', instead of 'current assessment'?  Not clear what is meant by 'current assessment' -->, the contribution of hatchery-origin fish is removed from estimates of spawner abundance to remove the influence of variability in annual production from hatcheries on status [@dfoWildSalmonPolicy2015].
+For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current assessment of stock status<!--KH: do you mean 'For our case study applications', instead of 'current assessment'?  Not clear what is meant by 'current assessment' -->, the contribution of hatchery-origin fish is removed from estimates of spawner abundance to remove the influence of variability in annual production from hatcheries on status [@dfoWildSalmonPolicy2015].
 
 
 <!--KH: I think a table defining all the Withler et al. categories (integrated-transition, integrated-wild, wild, wild-stray-infleunced) would be a good addition to this section, even if it was just re-producing an existing table from Withler et al. Given that time is limited, I don't think this needs to be done before submitting the working paper, but may be something to keep in mind for the CSAS meeting presentation and for the final, published version of the paper.  -->
@@ -93,6 +93,8 @@ To be consistent with the multidimensional approach to WSP status assessments de
 \end{tabular}
 (\#tab:SSmetrics)
 \end{table}
+
+<!-- LW comment: what does "relative to benchmarks' mean in the table above?-->
 
 
 Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks from across the Pacific region to predict reference points for Chinook stocks without recruitment data.
@@ -192,7 +194,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain, respectively, as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)). @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as representing 'as likely as not', encompassing probabilities slightly above even (50%-66%). <!-- CH omit: While DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009] provides draft risk categories, with ~50% described as neutral, 50-75% described as 'moderately high', and "75%-95% as 'high', these pertain to specifically to preventable declines and may not be relevant for LRP estimation. -->An additional consideration in this step is the probability threshold for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having Red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm.
+An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain, respectively, as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010, Table \@ref(tab:LikelihoodsIPCC)]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as representing 'as likely as not', encompassing probabilities slightly above even (50%-66%). <!-- CH omit: While DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009] provides draft risk categories, with ~50% described as neutral, 50-75% described as 'moderately high', and "75%-95% as 'high', these pertain to specifically to preventable declines and may not be relevant for LRP estimation. -->An additional consideration in this step is the probability threshold for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having Red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm.
 
 We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that minimum.  Instead, we demonstrate LRPs under various choices of probability levels. Although LRPs are intended to be identified by Science to represent the best scientific estimate of the level below which serious harm is expected to occur [@dfoScienceAdvicePrecautionary2021] and without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance.
 
@@ -226,7 +228,7 @@ Also, based on the IUCN probability categories in case studies paper section 2.3
 CH: good points Luke. Also, rebuilding guidance (DFO 2021) suggests precaution should be built into the management system and not the trigger for rebuilding.  i.e., 10% probability of breaching the LRP is not a breach. They suggest 50% probability is appropriate, which makes me wary about choosing a higher %. However, as you suggested, I have revised the text to say we recommend at least a 50% probability. 
 Another challenge when applying these choices to logistic regression-based LRPs is that high probabilities, the curve is quite flat, so the difference between an LRP at p=0.9 and 0.95 can be double or more in value for LRP-- so really hard to justify one value over the other. However at p=0.5, the curve is steep, so changing from p=0.4-0.6 doesn't really matter for the LRP.
 -->
-Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example (Holt et al. In review).
+Uncertainty in logistic regression LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example (Holt et al. In review).
 
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all component CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all component CUs are greater than their respective LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
