--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -113,7 +113,7 @@ We found that status was consistent across the LRP methods that were available, 
 
 The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU as they have been categorized as a separate SMU (Inside South Coast Chum - Fraser). While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fisheries and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portions of this SMU, with declines in the north, especially in the region defined by the Southern Coastal Streams CU component. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional WSP assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions in order to produce a standardized data set over the full length of the time series. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships for use in stock-recruitment benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI $\ll$ 0.5). The remaining systems had little or no hatchery enhancement (PNI likely $>$ 0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, annual estimates of hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions in order to produce a standardized data set over the full length of the time series. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships for use in stock-recruitment benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three systems with high levels of enhancement from the Georgia Strait CU (one with large hatchery production and two with extensive artificial spawning channels). The remaining systems had a mix of relatively small hatchery production or no hatchery production. Where available, annual estimates of hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportional LRP and logistic regression LRPs to this case study and evaluated the sensitivity of SMU-level status from proportional LRPs to various data inputs. We were not able to generate reliable logistic regression LRPs for this SMU because logistic regression models did not fit the data well, as shown by model diagnostics.
 
