--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -58,7 +58,7 @@ We chose the ISC Chum SMU as a case study because we were interested in explorin
 We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. We chose to apply infilling procedures for this SMU when possible to develop metrics of wild <!--LW: changed 'total' to 'wild' as that is what the benchmarks are based off and what we used for the entire analysis-->spawner abundance since infilling methods for this SMU have been previously peer-reviewed (@holtEvaluatingBenchmarksBiological2018). This differs from the approach taken for WCVI Chinook, in which infilling methods had not been established due to high and variable hatchery influences. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}. We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
 
 
-@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed systems with extensive hatchery influence (Qualicum River, Little Qualicum River, and Puntledge River, within the Georgia Strait CU) aligned with recommendations from @withlerGeneticallyBasedTargets2018. Hatchery contribution to spawning was near 100% for these systems.
+@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed three systems with extensive enhancement (Qualicum River and Little Qualicum River from spawning channels, and Puntledge River from hatchery production, all within the Georgia Strait CU) aligned with recommendations from @withlerGeneticallyBasedTargets2018. It is assumed that the enhanced contribution to spawning was near 100% for these systems.
 
 ## CU STATUS ESTIMATION
 
